# Robotica_25

./: .gitattributes  .gitignore  .gitmodules  README.md  design_documentation.md  requirements.txt  show_structure.sh
.github/workflows/: ci.yml
Behavior/rescue_robot/: charlie.py
Charlie_physical/scripts/: configuration.bash  fotocamera.bash  run_jetson.bash
Charlie_physical/src/: main.py
Charlie_simulation/ros2_create3_sim/: README.md  start.bash
docker/: Dockerfile  docker-compose.yml
documentation/: design_documentation.md
documentation/BTree/: BTree.md  BTree.mmd  bTree.md
documentation/architecture/: layer_architecture.md  overral architecture.drawio.xml
models/gazebo/: laboratorio.sdf  laboratorio_modificato.sdf
ros2_create3_sim/: Dockerfile  start.bash
ros2_physical/: docker-compose.yml
scripts/: configuration.bash  demo.py  fotocamera.bash  run_jetson.bash  variables.bash
src/: docker-compose.yml  main.py
src/act/: Dockerfile  action_node.py  entrypoint.sh
src/action/: action_node.py
src/charlie/: main.py
src/charlie/ros2_wrappers/: README.md  detection.py  navigation_node.py  package.xml  perception_node.py  setup.py
src/charlie/ros2_wrappers/launch/: charlie.launch.py
src/controller/: behavior_tree.py  controller_node.py
src/perception/: Dockerfile  perception_node.py
src/plan/: Dockerfile  __init__.py  behavior_tree.py  behaviors.py  ciao.py  drop.sh  entrypoint.sh  map.yaml  plan_node.py  plan_node_doc.md  test_plan_behaviors.py
src/sense/: Dockerfile  camera_host.py  camera_node.py  color_detector.py  entrypoint.sh  (+9 more)
(+76 files in other folders)
